2016-06-06  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-500

	* src/xml_io_compound_types.cc (xml_read_from_stream):

	Better error message if the user tries to read a broken GriddedField
	file with a wrong tag for *ArrayOfString*. Only occurs if user decides
	to manually create XML files instead of using proper tools such as
	atmlab or typhon. :-)
	
2016-06-03  Richard Larsson   <ric.larsson@gmail.com>

	* arts-2-3-499
	
	ComplexVector and ComplexMatrix are implemented with similar 
	internal structures as Matrix and Vector.  The goal: to simplify
	calculations of relaxation matrix inversion.  Will also help
	with keeping function calls shorter by not having to copy
	complx numbers to separate vectors.
	
	Also, none of this code has been optimized and is probably slow.
	
	* src/blash.h:  Added references to zgemm and zgemv
	
	* src/lapack.h: Added references to zgeteri and zgetrf.
	Also added references to dgeev and zgeev.
	
	* src/complex.{cc,h}:  Implementation of ComplexVector and 
	ComplexMatrix copying Matrix and Vector.  This was done just
	by copy-pasting matpackI code and adding the word "Complex"
	where approapriate and changing most double/Numeric references
	to Complex.
	
	There is probably a lot of redundant code in here, and also 
	a lot missing.  Especially missing is ways to combine Vectors 
	and ComplexVectors in the same mult statements.  Should be 
	possible, could be useful, but when it is useful it should be
	possible to add and check these at the time of need.
	
	* src/lin_alg.{cc,h}:  inv function for ComplexMatrix is working
	by relying on Simon's implementation for Matrix.
	
	Also added diagonalize functions that return P and W from A in
	the statement diag(P^-1*A*P)-W == 0.  For both Complex and Numeric
	Also added secondary method to calculate the matrix exponent 
	using the diagonalizations for testing purposes.  (This 
	should be faster than the other method for smaller matrices