@@ -2840,15 +2840,23 @@ void define_md_data_raw()
          "position (pressure, latitude, longitude) in the atmosphere:\n"
          "   1. temperature field\n"
          "   2. the corresponding altitude field\n"
-         "   3. vmr fields for the gaseous species\n"
+         "   3. vmr fields for the absorption species\n"
+         "The vmr fields read are governed by the species given in\n"
+         "*abs_species*. Beside gaseous species, these can also contain\n"
+         "purely absorbing particulate matter. In the latter case the\n"
+         "profiles are supposed to provide the mass content (units kg/m3) for\n"
+         "clouds and precipitation rates (units kg/m2/s) for precipitation\n"
+         "instead of the vmr.\n"
+         "\n"
          "The data is stored in different files. This methods reads all\n"
          "files and creates the variables *t_field_raw*, *z_field_raw* and\n"
          "*vmr_field_raw*.  *t_nlte_field_raw* is set to empty.\n"
          "\n"
          "Files in a scenarios should be named matching the pattern of:\n"
-         "tropical.H2O.xml\n"
+         "basename.speciesname.xml\n (for temperature and altitude the\n"
+         "expected 'speciesname' are 't' and'z', respectivly)."
          "\n"
-         "The files can be anywhere, but they must be all in the same\n"
+         "The files can be anywhere, but they must all be in the same\n"
          "directory, selected by 'basename'. The files are chosen by the\n"
          "species name. If you have more than one tag group for the same\n"
          "species, the same profile will be used.\n"
